@@ -3,7 +3,7 @@
 <property name="src.dir" value="./"/>
 <property name="bin.dir" value="bin"/>
 <property name="jar.dir" value="jar"/>
-<property name="version" value="1.1.1"/>
+<property name="version" value="1.2"/>
 
 <target name="clean">
 	<delete dir="${bin.dir}"/>
