@@ -1,3 +1,7 @@
+Utils 1.2 :
+Création : 
+	ComponentUtils : donne la taille maximal de l'espace util sur l'écran
+
 Utils 1.1.1 :
 bug fix : correction de version
 
